@startuml class diagram
scale 1920*1080

' Classes
class Server {
  - port: number
  - app: express.Express
  - server: express.Server
  + constructor(port: number): Server
  + start(): void
  + close(): void
  - setupRoutes(): void
}

' Classes - Product
class ProductRoute {
  - productController: ProductController
  - requestValidator: Joi
  + constructor(): ProductRoute
  + setupRouter(): Router
}
class ProductController {
  + readProducts(idx: number, limit: number): Product[]
}
class Product {
  + id: string
  + name: string
  + description: string
  + price: number
  + unit: string
  + image: string
  + find(query): Product[]
}

' Classes - Cart
class CartRoute {
  - cartController: CartController
  + constructor(): CartRoute
  + setupRouter(): Router
}
class CartController {
  + readCart(userId: string): Cart
  + updateProduct(userId: string, productId: string, amount: number): Cart
  + deleteCart(userId: string): void
}
class Cart {
  + userId: string
  + products: CartedProduct[]
  + findOne(conditions, projection, options): Cart
  + findOneAndUpdate(filter, query, options): Cart
  + deleteMany(conditions, options): void
}
class CartedProduct {
  + productId: string
  + amount: number
}

' Classes - User
class UserRoute {
  - userController: userController
  + constructor(): UserRoute
  + setupRouter(): Router
}
class UserController {
  + createUser(): string
  + readUser(userId: string): User
  + updateUser(user: User): User
  + authenticateUser(username: string, password: string): string
}
class User {
  + id: string
  + email: string
  + password: string
  + findOne(conditions, projcetion, options): User
  + findOneAndUpdate(filter, query, options): User
  + save(): Promise
}

' Clases - Order
class OrderRoute {
  - orderController: OrderController
  - cartController: CartController
  - productController: ProductController
  + constructor(): OrderController
  + setupRouter(): Router
}
class OrderController {
  + createOrder(userId: string)
  + readOrders(userId: string)
  + updateOrder(orderId: string, order: Order)
}
class Order {
  + id: string
  + userId: string
  + products: string[]
  + status: string
  + find(query): Order[]
  + findOneAndUpdate(filter, query, options): Order
  + save(): Promise
}
class OrderProduct {
  + productId: string
  + amount: number
}

' Relationships from Server to routes
Server ..> ProductRoute
Server ..> CartRoute
Server ..> UserRoute
Server ..> OrderRoute

' Relationships from routes to controllers
ProductRoute "1\t" *-- "1" ProductController
CartRoute "1  " *-- "1 " CartController
UserRoute "1 " *-- "1   " UserController
OrderRoute "1 " *-- "1   " OrderController
OrderRoute "1" *-- "1" CartController
OrderRoute "1" *-- "1" ProductController

' Relationships from controllers to models
ProductController ..> Product
CartController ..> Cart
UserController ..> User
OrderController ..> Order

' Relationships between models
Cart ..> CartedProduct
Order ..> OrderProduct
@enduml
